--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack",
     "dev": "webpack-dev-server --content-base public",
-    "lint": "eslint ."
+    "lint": "node_modules/.bin/eslint --ext .js  src"
   },
   "dependencies": {
     "babel-eslint": "9.0.0",
