--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack",
-    "dev": "webpack-dev-server --content-base public",
+    "dev": "open 'http://localhost:8080/' && webpack-dev-server --content-base public",
     "lint": "node_modules/.bin/eslint --ext .js  src"
   },
   "dependencies": {
