Add scripts to build and serve app

--- a/.gitignore
+++ b/.gitignore
@@ -87,7 +87,12 @@ typings/
 # DynamoDB Local files
 .dynamodb/
 
-  # Editor-specific files
+# Editor-specific files
   .vscode/
   .idea/
+
+# public folder bundles
+public/bundle*
+public/*.br
+public/*.gz
 
