Add reset script to package.json

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "build": "cross-env NODE_ENV=production webpack && precompress public",
     "dev": "open 'http://localhost:8080/' && webpack-dev-server --content-base public",
     "start": "open 'http://localhost:8080/' && http-serve ./public --gzip",
-    "lint": "node_modules/.bin/eslint --ext .js  src"
+    "lint": "node_modules/.bin/eslint --ext .js  src",
+    "reset": "npm prune && npm install"
   },
   "dependencies": {
     "babel-eslint": "9.0.0",
