--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "devDependencies": {
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-svelte3": "^2.7.3",
     "mini-css-extract-plugin": "^0.6.0",
     "serve": "^11.0.0",
@@ -26,7 +29,6 @@
   },
   "dependencies": {
     "babel-eslint": "9.0.0",
-    "eslint": "^6.3.0",
     "http-serve": "^1.0.1",
     "js-cookie": "^2.2.1",
     "precompress": "^5.1.0"
