--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
     "mini-css-extract-plugin": "^0.6.0",
     "serve": "^11.0.0",
     "style-loader": "^0.23.1",
-    "svelte": "^3.0.0",
-    "svelte-loader": "2.13.3",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.3.1"
@@ -31,6 +29,8 @@
     "babel-eslint": "9.0.0",
     "http-serve": "^1.0.1",
     "js-cookie": "^2.2.1",
-    "precompress": "^5.1.0"
+    "precompress": "^5.1.0",
+    "svelte": "^3.0.0",
+    "svelte-loader": "2.13.3"
   }
 }
