--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-svelte3": "^2.7.3",
     "mini-css-extract-plugin": "^0.6.0",
+    "prettier": "1.18.2",
+    "prettier-plugin-svelte": "^0.7.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-livereload": "^1.0.1",
     "rollup-plugin-node-resolve": "^5.2.0",
@@ -29,7 +31,8 @@
     "start": "node ./scripts/start.js",
     "start:open": "node ./scripts/start.js --open",
     "lint": "node_modules/.bin/eslint --ext .js,.svelte  src scripts",
-    "reset": "npm prune && npm install"
+    "reset": "npm prune && npm install",
+    "prettier": "prettier --write --plugin-search-dir=. ./**/*.svelte ./**/*.html ./**/*.js"
   },
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^1.3.0",
