--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "start:open": "node ./scripts/start.js --open",
     "lint": "node_modules/.bin/eslint --ext .js,.svelte  src scripts",
     "reset": "npm prune && npm install",
-    "prettier": "prettier --write --plugin-search-dir=. ./**/*.svelte ./**/*.html ./**/*.js"
+    "prettier": "prettier --write --plugin-search-dir=. ./**/*.svelte ./**/*.html ./**/*.js",
+    "deploy": "now"
   },
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^1.3.0",
