--- a/package.json
+++ b/package.json
@@ -34,8 +34,9 @@
     "start:open": "node ./scripts/start.js --open",
     "lint": "node_modules/.bin/eslint --ext .js,.svelte  src scripts",
     "reset": "npm prune && npm install",
-    "e2e": "cypress open",
-    "prettier": "prettier --write --plugin-search-dir=. ./**/*.svelte ./**/*.html ./**/*.js preCommit.js",
+    "e2e:open": "cypress open",
+    "e2e": "cypress run",
+    "prettier": "prettier --write --plugin-search-dir=. ./**/*.svelte ./**/*.html ./**/*.js ./**/*.spec.js preCommit.js",
     "deploy": "now"
   },
   "dependencies": {
