--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svelte-app",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "devDependencies": {
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
@@ -37,17 +37,22 @@
     "e2e:open": "cypress open",
     "e2e": "cypress run",
     "prettier": "prettier --write --plugin-search-dir=. ./**/*.svelte ./**/*.html ./**/*.js ./**/*.spec.js preCommit.js",
-    "deploy": "now"
+    "deploy": "now",
+    "version": "node ./scripts/version.js",
+    "version:minor": "node ./scripts/version.js --minor",
+    "version:major": "node ./scripts/version.js --major"
   },
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^1.3.0",
     "autoprefixer": "^9.6.1",
     "babel-eslint": "9.0.0",
+    "commander": "^3.0.2",
     "http-serve": "^1.0.1",
     "js-cookie": "^2.2.1",
     "postcss": "^7.0.18",
     "postcss-import": "^12.0.1",
     "precompress": "^5.1.0",
+    "semver": "^6.3.0",
     "svelte": "^3.0.0",
     "svelte-loader": "2.13.3",
     "svelte-preprocess": "^3.1.1",
